[package]
name = "create_certs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.4"
#rsa = {version = "0.8.1", features = ["pem"]}
#pem = "1.1.1"

openssl = { version = "0.10.37", features = ["vendored"] }


